........S. [ZBX-6770] improved host macro resolving by using configuration cache to get hosts used in trigger expressions (wiper)
.......PS. [ZBXNEXT-1098] added internal check support to Zabbix proxies (wiper)
...GI..... [ZBX-6587] fixed Windows binaries descriptions (dimir)
...G...... [ZBXNEXT-1528] added net.if.in, net.if.out and net.if.total item support on HP-UX platforms (igors)

Bug fixes:
....I..... [ZBX-6831] fixed webtest item conversion in 1.8->2.0 database upgrade patch for mysql (wiper)
.......PS. [ZBX-6451] fixed items,items_unsupported internal checks counting discovery rules as items (wiper)
...G...... [ZBX-6527] fixed proc.mem calculations with getprocs() for AIX (wiper)
........S. [ZBX-5924] fixed curl verify host option setting in ez texting (wiper)
...G...... [ZBX-6664] removed printing of informative line about -vv option after zabbix_sender failure if this option was already used (wiper)
..F....... [ZBX-6275] removed the "error" columns in the template item, trigger and discovery rule lists (Guntis)
A......... [ZBX-5604] fixed updating graphs and graph prototypes when items are not specified (Ivo)
..F....... [ZBX-6586] added sid checking for logout action (Guntis)
.......PS. [ZBX-6819] fixed memory leak in snmp trapper regular expression processing (wiper)
..F....... [ZBX-6646] removed Micro and Milli units, unifieded length for y-axis values and fixed division by zero in graphs (Oleg)
..F....... [ZBX-6777] added pointer cursor to the main menu tabs (Guntis)
A......... [ZBX-6699] added object flags in Host, Host group, Template and Item get methods (Ivo)
..F....... [ZBX-6794] fixed host name displaying in pie charts (Ivo)
..F....... [ZBX-6143] fixed choice for icon label location (Guntis)
..F....... [ZBX-6372] in trigger filtering, trigger severity default value changed to "Not classified" (Guntis)
..F....... [ZBX-6624] fixed incorrect y-axis interval names for "s" units (Oleg)